funcion de registar

--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -30,7 +30,7 @@
       </div> 
       <div class="card bg-success">
         <div class="card-body text-center">
-          <button type="button" class="btn">
+          <button type="button" class="btn" routerlink="receipt" (click)="receipt()">
             <i class="glyphicon glyphicon-plus" style="font-size:38px; color:white;"></i>
           </button>
           <p class="card-text text-white" align="justify">Registrar ingreso de mercancia a la bodega de 
