--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="card bg-danger">
         <div class="card-body text-center">
-          <button type="button" class="btn">
+          <button type="button" class="btn" routerLink="outlet" (click)="outlet()">
             <i class="glyphicon glyphicon-plus" style="font-size:38px; color:white;"></i>
           </button>
           <p class="card-text text-white"align="justify">Registrar salida de mercancia de la bodega de 
