--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -12,8 +12,8 @@
     <div class="card-deck">
       <div class="card bg-primary">
         <div class="card-body text-center">
-          <button type="button" class="btn">
-            <i class="glyphicon glyphicon-search" style="font-size:38px; color:white;"></i>
+          <button type="button" class="btn" routerLink="search" (click)="search()">
+            <i class="glyphicon glyphicon-search"  style="font-size:38px; color:white;"></i>
           </button>
           <p class="card-text text-white"align="justify">Busqueda detallada de mercancia por cliente.</p>
         </div>
