--- a/src/app/components/manager/manager.component.html
+++ b/src/app/components/manager/manager.component.html
@@ -40,7 +40,7 @@
       </div> 
       <div class="card bg-primary">
         <div class="card-body text-center">
-          <button type="button" class="btn">
+          <button type="button" class="btn" role="button" routerLink="report" (click)="report()">
             <i class="glyphicon glyphicon-file" style="font-size:38px; color:white;"></i>
           </button>
           <p class="card-text text-white"align="justify">Generar informe detallado sobre almacenamiento de mercancias.</p>
